fix collapsing height issue

--- a/_less/plugins/carousel.less
+++ b/_less/plugins/carousel.less
@@ -5,6 +5,7 @@
   position: relative;
   width: 100%;
   overflow: hidden;
+  height: 100%;
 }
 .carousel-inner > .slide {
   position: relative;
